# gate-analysis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  biblio.md  classical_methods_nb.py  notebook.py  pyproject.toml  transformer_methods_nb.py
.github/workflows/: ci.yml
src/gate_analysis/: 0_curve_fit.py  1_segmented_regression.py  2_bayesian_changepoint.py  3_cpop_piecewise_linear.py  4_ruptures_ols.py  5_savitzky_golay.py  6_kalman_filter.py  8_not_detection.py  __init__.py  common.py
