[project]
name = "gate-analysis"
version = "0.1.0"
description = "Demo implementations for pipe gate closing curve analysis"
readme = "README.md"
authors = [
    { name = "jgaffiot", email = "j.gaffiot@laposte.net" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "bokeh",
    "scipy",
    "piecewise-regression",
    "pymc",
    "ruptures",
    "filterpy",
    "marimo>=0.19.11",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
